// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bash parser parse correctly 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "end": 4,
              "firstColumn": 1,
              "firstLine": 1,
              "lastColumn": 5,
              "lastLine": 1,
              "start": 0,
              "text": "curl",
              "token": "WORD",
              "type": "token",
            },
          ],
          "end": 4,
          "firstColumn": 1,
          "firstLine": 1,
          "id": 4,
          "internalRuleIndex": 5,
          "lastColumn": 5,
          "lastLine": 1,
          "ruleIndex": 3,
          "start": 0,
          "symbol": "literal",
          "type": "symbol",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "end": 6,
                  "firstColumn": 6,
                  "firstLine": 1,
                  "lastColumn": 7,
                  "lastLine": 1,
                  "start": 5,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
                Object {
                  "end": 27,
                  "firstColumn": 7,
                  "firstLine": 1,
                  "lastColumn": 28,
                  "lastLine": 1,
                  "start": 6,
                  "text": "https://api.test.com/",
                  "token": "STRING_CONTENT",
                  "type": "token",
                },
                Object {
                  "end": 28,
                  "firstColumn": 28,
                  "firstLine": 1,
                  "lastColumn": 29,
                  "lastLine": 1,
                  "start": 27,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
              ],
              "end": 28,
              "firstColumn": 6,
              "firstLine": 1,
              "id": 6,
              "internalRuleIndex": 10,
              "lastColumn": 29,
              "lastLine": 1,
              "ruleIndex": 4,
              "start": 5,
              "symbol": "string",
              "type": "symbol",
            },
          ],
          "end": 28,
          "firstColumn": 6,
          "firstLine": 1,
          "id": 5,
          "internalRuleIndex": 6,
          "lastColumn": 29,
          "lastLine": 1,
          "ruleIndex": 3,
          "start": 5,
          "symbol": "literal",
          "type": "symbol",
        },
        Object {
          "children": Array [
            Object {
              "end": 31,
              "firstColumn": 30,
              "firstLine": 1,
              "lastColumn": 32,
              "lastLine": 1,
              "start": 29,
              "text": "-u",
              "token": "WORD",
              "type": "token",
            },
          ],
          "end": 31,
          "firstColumn": 30,
          "firstLine": 1,
          "id": 7,
          "internalRuleIndex": 5,
          "lastColumn": 32,
          "lastLine": 1,
          "ruleIndex": 3,
          "start": 29,
          "symbol": "literal",
          "type": "symbol",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "end": 33,
                  "firstColumn": 33,
                  "firstLine": 1,
                  "lastColumn": 34,
                  "lastLine": 1,
                  "start": 32,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
                Object {
                  "end": 60,
                  "firstColumn": 34,
                  "firstLine": 1,
                  "lastColumn": 61,
                  "lastLine": 1,
                  "start": 33,
                  "text": "some_username:some_password",
                  "token": "STRING_CONTENT",
                  "type": "token",
                },
                Object {
                  "end": 61,
                  "firstColumn": 61,
                  "firstLine": 1,
                  "lastColumn": 62,
                  "lastLine": 1,
                  "start": 60,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
              ],
              "end": 61,
              "firstColumn": 33,
              "firstLine": 1,
              "id": 9,
              "internalRuleIndex": 10,
              "lastColumn": 62,
              "lastLine": 1,
              "ruleIndex": 4,
              "start": 32,
              "symbol": "string",
              "type": "symbol",
            },
          ],
          "end": 61,
          "firstColumn": 33,
          "firstLine": 1,
          "id": 8,
          "internalRuleIndex": 6,
          "lastColumn": 62,
          "lastLine": 1,
          "ruleIndex": 3,
          "start": 32,
          "symbol": "literal",
          "type": "symbol",
        },
      ],
      "end": 61,
      "firstColumn": 1,
      "firstLine": 1,
      "id": 3,
      "internalRuleIndex": 4,
      "lastColumn": 62,
      "lastLine": 1,
      "ruleIndex": 2,
      "start": 0,
      "symbol": "command",
      "type": "symbol",
    },
  ],
  "end": 61,
  "firstColumn": 1,
  "firstLine": 1,
  "id": 2,
  "internalRuleIndex": 2,
  "lastColumn": 62,
  "lastLine": 1,
  "ruleIndex": 1,
  "start": 0,
  "symbol": "progam",
  "type": "symbol",
}
`;

exports[`bash parser parse new line 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "end": 4,
              "firstColumn": 1,
              "firstLine": 1,
              "lastColumn": 5,
              "lastLine": 1,
              "start": 0,
              "text": "curl",
              "token": "WORD",
              "type": "token",
            },
          ],
          "end": 4,
          "firstColumn": 1,
          "firstLine": 1,
          "id": 4,
          "internalRuleIndex": 5,
          "lastColumn": 5,
          "lastLine": 1,
          "ruleIndex": 3,
          "start": 0,
          "symbol": "literal",
          "type": "symbol",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "end": 6,
                  "firstColumn": 6,
                  "firstLine": 1,
                  "lastColumn": 7,
                  "lastLine": 1,
                  "start": 5,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
                Object {
                  "end": 10,
                  "firstColumn": 7,
                  "firstLine": 1,
                  "lastColumn": 2,
                  "lastLine": 2,
                  "start": 6,
                  "text": "x\\\\
z",
                  "token": "STRING_CONTENT",
                  "type": "token",
                },
                Object {
                  "end": 11,
                  "firstColumn": 2,
                  "firstLine": 2,
                  "lastColumn": 3,
                  "lastLine": 2,
                  "start": 10,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
              ],
              "end": 11,
              "firstColumn": 6,
              "firstLine": 1,
              "id": 6,
              "internalRuleIndex": 10,
              "lastColumn": 3,
              "lastLine": 2,
              "ruleIndex": 4,
              "start": 5,
              "symbol": "string",
              "type": "symbol",
            },
          ],
          "end": 11,
          "firstColumn": 6,
          "firstLine": 1,
          "id": 5,
          "internalRuleIndex": 6,
          "lastColumn": 3,
          "lastLine": 2,
          "ruleIndex": 3,
          "start": 5,
          "symbol": "literal",
          "type": "symbol",
        },
        Object {
          "children": Array [
            Object {
              "end": 21,
              "firstColumn": 6,
              "firstLine": 3,
              "lastColumn": 8,
              "lastLine": 3,
              "start": 19,
              "text": "-u",
              "token": "WORD",
              "type": "token",
            },
          ],
          "end": 21,
          "firstColumn": 6,
          "firstLine": 3,
          "id": 7,
          "internalRuleIndex": 5,
          "lastColumn": 8,
          "lastLine": 3,
          "ruleIndex": 3,
          "start": 19,
          "symbol": "literal",
          "type": "symbol",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "end": 23,
                  "firstColumn": 9,
                  "firstLine": 3,
                  "lastColumn": 10,
                  "lastLine": 3,
                  "start": 22,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
                Object {
                  "end": 26,
                  "firstColumn": 10,
                  "firstLine": 3,
                  "lastColumn": 13,
                  "lastLine": 3,
                  "start": 23,
                  "text": "a:b",
                  "token": "STRING_CONTENT",
                  "type": "token",
                },
                Object {
                  "end": 27,
                  "firstColumn": 13,
                  "firstLine": 3,
                  "lastColumn": 14,
                  "lastLine": 3,
                  "start": 26,
                  "text": "\\"",
                  "token": "QUOTE",
                  "type": "token",
                },
              ],
              "end": 27,
              "firstColumn": 9,
              "firstLine": 3,
              "id": 9,
              "internalRuleIndex": 10,
              "lastColumn": 14,
              "lastLine": 3,
              "ruleIndex": 4,
              "start": 22,
              "symbol": "string",
              "type": "symbol",
            },
          ],
          "end": 27,
          "firstColumn": 9,
          "firstLine": 3,
          "id": 8,
          "internalRuleIndex": 6,
          "lastColumn": 14,
          "lastLine": 3,
          "ruleIndex": 3,
          "start": 22,
          "symbol": "literal",
          "type": "symbol",
        },
      ],
      "end": 27,
      "firstColumn": 1,
      "firstLine": 1,
      "id": 3,
      "internalRuleIndex": 4,
      "lastColumn": 14,
      "lastLine": 3,
      "ruleIndex": 2,
      "start": 0,
      "symbol": "command",
      "type": "symbol",
    },
  ],
  "end": 27,
  "firstColumn": 1,
  "firstLine": 1,
  "id": 2,
  "internalRuleIndex": 2,
  "lastColumn": 14,
  "lastLine": 3,
  "ruleIndex": 1,
  "start": 0,
  "symbol": "progam",
  "type": "symbol",
}
`;

exports[`bash parser token correctly 1`] = `
Array [
  Object {
    "channel": undefined,
    "end": 4,
    "firstColumn": 1,
    "firstLine": 1,
    "lastColumn": 5,
    "lastLine": 1,
    "start": 0,
    "t": "WORD",
    "text": "curl",
    "token": "WORD",
  },
  Object {
    "channel": "HIDDEN",
    "end": 5,
    "firstColumn": 5,
    "firstLine": 1,
    "lastColumn": 6,
    "lastLine": 1,
    "start": 4,
    "t": "HIDDEN",
    "text": " ",
    "token": "HIDDEN",
  },
  Object {
    "channel": undefined,
    "end": 6,
    "firstColumn": 6,
    "firstLine": 1,
    "lastColumn": 7,
    "lastLine": 1,
    "start": 5,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "channel": undefined,
    "end": 27,
    "firstColumn": 7,
    "firstLine": 1,
    "lastColumn": 28,
    "lastLine": 1,
    "start": 6,
    "t": "STRING_CONTENT",
    "text": "https://api.test.com/",
    "token": "STRING_CONTENT",
  },
  Object {
    "channel": undefined,
    "end": 28,
    "firstColumn": 28,
    "firstLine": 1,
    "lastColumn": 29,
    "lastLine": 1,
    "start": 27,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "channel": "HIDDEN",
    "end": 29,
    "firstColumn": 29,
    "firstLine": 1,
    "lastColumn": 30,
    "lastLine": 1,
    "start": 28,
    "t": "HIDDEN",
    "text": " ",
    "token": "HIDDEN",
  },
  Object {
    "channel": undefined,
    "end": 31,
    "firstColumn": 30,
    "firstLine": 1,
    "lastColumn": 32,
    "lastLine": 1,
    "start": 29,
    "t": "WORD",
    "text": "-u",
    "token": "WORD",
  },
  Object {
    "channel": "HIDDEN",
    "end": 32,
    "firstColumn": 32,
    "firstLine": 1,
    "lastColumn": 33,
    "lastLine": 1,
    "start": 31,
    "t": "HIDDEN",
    "text": " ",
    "token": "HIDDEN",
  },
  Object {
    "channel": undefined,
    "end": 33,
    "firstColumn": 33,
    "firstLine": 1,
    "lastColumn": 34,
    "lastLine": 1,
    "start": 32,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "channel": undefined,
    "end": 60,
    "firstColumn": 34,
    "firstLine": 1,
    "lastColumn": 61,
    "lastLine": 1,
    "start": 33,
    "t": "STRING_CONTENT",
    "text": "some_username:some_password",
    "token": "STRING_CONTENT",
  },
  Object {
    "channel": undefined,
    "end": 61,
    "firstColumn": 61,
    "firstLine": 1,
    "lastColumn": 62,
    "lastLine": 1,
    "start": 60,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "end": 61,
    "firstColumn": 62,
    "firstLine": 1,
    "lastColumn": 62,
    "lastLine": 1,
    "start": 61,
    "t": "$EOF",
    "text": "",
    "token": "$EOF",
  },
]
`;

exports[`bash parser token new line 1`] = `
Array [
  Object {
    "channel": undefined,
    "end": 4,
    "firstColumn": 1,
    "firstLine": 1,
    "lastColumn": 5,
    "lastLine": 1,
    "start": 0,
    "t": "WORD",
    "text": "curl",
    "token": "WORD",
  },
  Object {
    "channel": "HIDDEN",
    "end": 5,
    "firstColumn": 5,
    "firstLine": 1,
    "lastColumn": 6,
    "lastLine": 1,
    "start": 4,
    "t": "HIDDEN",
    "text": " ",
    "token": "HIDDEN",
  },
  Object {
    "channel": undefined,
    "end": 6,
    "firstColumn": 6,
    "firstLine": 1,
    "lastColumn": 7,
    "lastLine": 1,
    "start": 5,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "channel": undefined,
    "end": 14,
    "firstColumn": 7,
    "firstLine": 1,
    "lastColumn": 6,
    "lastLine": 2,
    "start": 6,
    "t": "STRING_CONTENT",
    "text": "x\\\\
    z",
    "token": "STRING_CONTENT",
  },
  Object {
    "channel": undefined,
    "end": 15,
    "firstColumn": 6,
    "firstLine": 2,
    "lastColumn": 7,
    "lastLine": 2,
    "start": 14,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "channel": "HIDDEN",
    "end": 16,
    "firstColumn": 7,
    "firstLine": 2,
    "lastColumn": 8,
    "lastLine": 2,
    "start": 15,
    "t": "HIDDEN",
    "text": " ",
    "token": "HIDDEN",
  },
  Object {
    "channel": "HIDDEN",
    "end": 18,
    "firstColumn": 8,
    "firstLine": 2,
    "lastColumn": 1,
    "lastLine": 3,
    "start": 16,
    "t": "HIDDEN",
    "text": "\\\\
",
    "token": "HIDDEN",
  },
  Object {
    "channel": "HIDDEN",
    "end": 23,
    "firstColumn": 1,
    "firstLine": 3,
    "lastColumn": 6,
    "lastLine": 3,
    "start": 18,
    "t": "HIDDEN",
    "text": "     ",
    "token": "HIDDEN",
  },
  Object {
    "channel": undefined,
    "end": 25,
    "firstColumn": 6,
    "firstLine": 3,
    "lastColumn": 8,
    "lastLine": 3,
    "start": 23,
    "t": "WORD",
    "text": "-u",
    "token": "WORD",
  },
  Object {
    "channel": "HIDDEN",
    "end": 26,
    "firstColumn": 8,
    "firstLine": 3,
    "lastColumn": 9,
    "lastLine": 3,
    "start": 25,
    "t": "HIDDEN",
    "text": " ",
    "token": "HIDDEN",
  },
  Object {
    "channel": undefined,
    "end": 27,
    "firstColumn": 9,
    "firstLine": 3,
    "lastColumn": 10,
    "lastLine": 3,
    "start": 26,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "channel": undefined,
    "end": 30,
    "firstColumn": 10,
    "firstLine": 3,
    "lastColumn": 13,
    "lastLine": 3,
    "start": 27,
    "t": "STRING_CONTENT",
    "text": "a:b",
    "token": "STRING_CONTENT",
  },
  Object {
    "channel": undefined,
    "end": 31,
    "firstColumn": 13,
    "firstLine": 3,
    "lastColumn": 14,
    "lastLine": 3,
    "start": 30,
    "t": "QUOTE",
    "text": "\\"",
    "token": "QUOTE",
  },
  Object {
    "end": 31,
    "firstColumn": 14,
    "firstLine": 3,
    "lastColumn": 14,
    "lastLine": 3,
    "start": 31,
    "t": "$EOF",
    "text": "",
    "token": "$EOF",
  },
]
`;
